refactored into a graph class (not templated yet), added DFS and BFS

--- a/GraphClassImplementation/GraphClassImplementation.vcxproj
+++ b/GraphClassImplementation/GraphClassImplementation.vcxproj
@@ -123,7 +123,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AirlineGraph.cpp" />
+    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="graphtypes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="graphtypes.h" />
