--- a/GraphClassImplementation/GraphClassImplementation.vcxproj.filters
+++ b/GraphClassImplementation/GraphClassImplementation.vcxproj.filters
@@ -20,7 +20,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AirlineGraph.cpp">
+    <ClCompile Include="graphtypes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
