--- a/GraphClassImplementation/GraphClassImplementation.vcxproj.filters
+++ b/GraphClassImplementation/GraphClassImplementation.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="graphtypes.h">
+    <ClInclude Include="SimpleGraph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="graphtypes.cpp">
+    <ClCompile Include="SimpleGraph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source.cpp">
